# gstreamer-prj

./: .gitignore  CMakeLists.txt  Makefile  README.md  basic.c  main  main.c
example/: chatgpt.md  csdn_gen.c  csdn_parse.c  csdn_sei.c  csdn_sei.md  csdn_sei_rx.c  write_plugin.md  zhihu_sei.c  zhihu_sei.md  zhihu_sei_rx.c
gst-app/: README.md  meson.build
gst-app/src/: airpipeline-linux.c  airpipeline-macos.c  airpipeline.c  airpipeline.h  airplane.c
gst-plugin/: README.md  meson.build
gst-plugin/src/: gstmyfilter.c  gstmyfilter.h  gsttransform.c
src/: basic1  basic1.c  basic2.c  basic3.c  demosrc.c  gui5.c  info9.c  main.c  padcap6.c  playback13.c  shortcutting8.c  streaming12.c  thread7.c  time4.c
